# auth_microservice

./: .Dockerfile  .env.docker.example  .env.example  .gitignore  .python-version  .test_Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  todo_list.txt
.github/workflows/: docker-image.yml
auth_microservice/: Makefile  scripts.mk
auth_microservice/scripts/: format.sh  ruff_mypy.sh  test.sh
auth_microservice/src/: connection.py  create_db.py  dynamic_models.py  logger.py  main.py  models.py  password_utils.py  token_utils.py
auth_microservice/src/auth_router/: auth_router.py
auth_microservice/src/crud/: base_generic_crud.py  pkce_crud.py  user_crud.py
auth_microservice/src/dependencies/: auth_dependency.py
auth_microservice/src/docs/: responses.py
auth_microservice/src/models/: abstract_view.py  dynamic_db_models.py  dynamic_models.py  old_models.py  pkce_models.py
auth_microservice/src/routers/: auth_router.py  pkce_router.py  reg_log_router.py  ui_router.py  user_router.py
auth_microservice/src/schemes/: pkce_sheme.py
auth_microservice/src/views/: pkce_view.py  user_view.py
auth_microservice/tests/: conftest.py  test_auth.py  test_models.py  test_reg_log.py  test_user.py
