[project]
name = "auth_microservice"
description = "auth_microservice"
readme = "README.md"
requires-python = ">=3.12"
version = "1.0.0"
dependencies = [
    "fastapi==0.*",
    "uvicorn==0.*",
    "sqlalchemy==2.*",
    "psycopg2-binary==2.*",
    "sqlmodel==0.*",
    "asyncpg==0.*",
    "loguru==0.*",
    "email-validator==2.*",
    "pytest==8.*",
    "coverage==7.*",
    "python-dotenv==1.*",
    "pyjwt==2.*",
    "httpx>=0.28.1",
]
